Update and rename P2G7_fachry.ipynb to sentiment_analysis.ipynb

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -6,7 +6,7 @@
         "id": "4tNZCgw7Tfsx"
       },
       "source": [
-        "# GC 7 DEEPLEARNING\n",
+        "# SENTIMENT ANALYSIS USING DEEP LEARNING\n",
         "\n",
         "---"
       ]
@@ -28,11 +28,7 @@
       "source": [
         "=================================================\n",
         "\n",
-        "Graded Challenge 5\n",
-        "\n",
         "Nama  : Sulthan Fachry Inadamar\n",
-        "\n",
-        "Batch : HCK-020\n",
         "\n",
         "================================================="
       ]
